@@ -2,4 +2,5 @@
 [+] #371 Check PluXml update using javascript if "curl" or "file_get_contents" can not be used (bazooka07)
 FIX #365 plxUtils::getLangs() optimisations (bazooka07)
 FIX #367 plxUtils::sendmail() minor correction (bazooka07)
+FIX #369 Comments indentation does not work on frontend (P3ter)
 FIX #372 [i18n] missing L_CONFIG_ADVANCED_LOSTPASSWORD in oc, es, pl, pt, ro, ru, it (P3ter)
